5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4344/executions/1601_1805.log
== TEST (2019-04-01 01:24:46) 
-- CODE:
print"coordenadas do ponto A"
-- ERROR:
File "XXXX", line 1
    print"coordenadas do ponto A"
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 01:28:51) 
-- CODE:
print("coordenadas do ponto A")
Xa = input("absica do ponto A(Xa)")
Ya = input("ordenada do ponto A(Ya)")
Xb = input("absica do ponto B(Xb)")
Yb = input("ordenada do ponto B(Yb)")

Xm = (Xb + Xa)/2
Ym = (Yb + Ya)/2

print(Xm, Ym)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    Xm = (Xb + Xa)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 01:32:11) 
-- CODE:
print("coordenadas do ponto A")
Xa = float(input("absica do ponto A(Xa)"))
Ya = float(input("ordenada do ponto A(Ya)"))
Xb = float(input("absica do ponto B(Xb)"))
Yb = float(input("ordenada do ponto B(Yb)"))

Xm = (Xb + Xa)
Ym = (Yb + Ya)

print(Xm, Ym)
-- OUTPUT:
coordenadas do ponto A
80.0 73.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 01:32:11) 
-- CODE:
print("coordenadas do ponto A")
Xa = float(input("absica do ponto A(Xa)"))
Ya = float(input("ordenada do ponto A(Ya)"))
Xb = float(input("absica do ponto B(Xb)"))
Yb = float(input("ordenada do ponto B(Yb)"))

Xm = (Xb + Xa)
Ym = (Yb + Ya)

print(Xm, Ym)
-- OUTPUT:
coordenadas do ponto A
80.0 73.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 01:32:11) 
-- CODE:
print("coordenadas do ponto A")
Xa = float(input("absica do ponto A(Xa)"))
Ya = float(input("ordenada do ponto A(Ya)"))
Xb = float(input("absica do ponto B(Xb)"))
Yb = float(input("ordenada do ponto B(Yb)"))

Xm = (Xb + Xa)
Ym = (Yb + Ya)

print(Xm, Ym)
-- OUTPUT:
coordenadas do ponto A
80.0 73.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 01:33:46) 
-- CODE:
print("coordenadas do ponto A")
Xa = input("absica do ponto A(Xa)")
Ya = input("ordenada do ponto A(Ya)")
Xb = input("absica do ponto B(Xb)")
Yb = input("ordenada do ponto B(Yb)")

Xm = (Xb + Xa)/2
Ym = (Yb + Ya)/2

print(Xm, Ym)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    Xm = (Xb + Xa)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 01:36:34) 
-- CODE:
print("coordenadas do ponto A")
Xa = input("abscissa do ponto A(Xa)")
Ya = input("ordenada do ponto A(Ya)")
Xb = input("abscissa do ponto B(Xb)")
Yb = input("ordenada do ponto B(Yb)")

Xm = float((Xb + Xa)/2)
Ym = float((Yb + Ya)/2)

print(Xm, Ym)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    Xm = float((Xb + Xa)/2)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 01:36:48) 
-- CODE:
print("coordenadas do ponto A")
Xa = input("abscissa do ponto A(Xa)")
Ya = input("ordenada do ponto A(Ya)")
Xb = input("abscissa do ponto B(Xb)")
Yb = input("ordenada do ponto B(Yb)")

Xm = float((Xb + Xa)/2)
Ym = float((Yb + Ya)/2)

print(Xm, Ym)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    Xm = float((Xb + Xa)/2)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 01:41:51) 
-- CODE:
print("coordenadas do ponto A...")
Xa = input("abscissa do ponto A(Xa)")
int(Xa)
Ya = input("ordenada do ponto A(Ya)")
int(Ya)
print("coordenadas do ponto B...")
Xb = input("abscissa do ponto B(Xb)")
int(Xb)
Yb = input("ordenada do ponto B(Yb)")
int(Yb)

Xm = (Xb + Xa)/2
Ym = (Yb + Ya)/2

print(Xm, Ym)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    Xm = (Xb + Xa)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 01:42:52) 
-- CODE:
print("coordenadas do ponto A...")
Xa = input("abscissa do ponto A(Xa)")
int(Xa)
Ya = input("ordenada do ponto A(Ya)")
int(Ya)
print("coordenadas do ponto B...")
Xb = input("abscissa do ponto B(Xb)")
int(Xb)
Yb = input("ordenada do ponto B(Yb)")
int(Yb)

Xm = (Xb + Xa)/2
round(Xm,1)
Ym = (Yb + Ya)/2
round(Ym,1)

print(Xm, Ym)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    Xm = (Xb + Xa)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 01:49:57) 
-- CODE:
print("coordenadas do ponto A...")
Xa = input("abscissa do ponto A(Xa)")
Ya = input("ordenada do ponto A(Ya)")
###
print("coordenadas do ponto B...")
Xb = input("abscissa do ponto B(Xb)")
Yb = input("ordenada do ponto B(Yb)")
###
Xm = (Xb + Xa)/2
round(Xm,1)
Ym = (Yb + Ya)/2
round(Ym,1)

print(Xm)
print(Ym)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    Xm = (Xb + Xa)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 01:53:42) 
-- CODE:
print("coordenadas do ponto A...")
Xa = input("abscissa do ponto A(Xa)")
Ya = input("ordenada do ponto A(Ya)")
###
print("coordenadas do ponto B...")
Xb = input("abscissa do ponto B(Xb)")
Yb = input("ordenada do ponto B(Yb)")
###
Xm = ((Xb + Xa)/2)
round(Xm,1)
Ym = (Yb + Ya)/2
round(Ym,1)

print(Xm)
print(Ym)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    Xm = ((Xb + Xa)/2)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 01:54:19) 
-- CODE:
print("coordenadas do ponto A...")
Xa = int(input("abscissa do ponto A(Xa)"))
Ya = input("ordenada do ponto A(Ya)")
###
print("coordenadas do ponto B...")
Xb = int(input("abscissa do ponto B(Xb)"))
Yb = input("ordenada do ponto B(Yb)")
###
Xm = ((Xb + Xa)/2)
round(Xm,1)
Ym = (Yb + Ya)/2
round(Ym,1)

print(Xm)
print(Ym)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Ym = (Yb + Ya)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 01:54:49) 
-- CODE:
print("coordenadas do ponto A...")
Xa = int(input("abscissa do ponto A(Xa)"))
Ya = int(input("ordenada do ponto A(Ya)"))
###
print("coordenadas do ponto B...")
Xb = int(input("abscissa do ponto B(Xb)"))
Yb = int(input("ordenada do ponto B(Yb)"))
###
Xm = ((Xb + Xa)/2)
round(Xm,1)
Ym = (Yb + Ya)/2
round(Ym,1)

print(Xm)
print(Ym)
-- OUTPUT:
coordenadas do ponto A...
coordenadas do ponto B...
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 01:55:06) 
-- CODE:
print("coordenadas do ponto A...")
Xa = int(input("abscissa do ponto A(Xa)"))
Ya = int(input("ordenada do ponto A(Ya)"))
###
print("coordenadas do ponto B...")
Xb = int(input("abscissa do ponto B(Xb)"))
Yb = int(input("ordenada do ponto B(Yb)"))
###
Xm = ((Xb + Xa)/2)
round(Xm,1)
Ym = (Yb + Ya)/2
round(Ym,1)

print(Xm)
print(Ym)
-- EXECUTION TIME:
0.297131
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
coordenadas do ponto A...
coordenadas do ponto B...
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
coordenadas do ponto A...
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
coordenadas do ponto A...
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 01:55:43) 
-- CODE:
print("coordenadas do ponto A...")
Xa = int(input("abscissa do ponto A(Xa)"))
Ya = int(input("ordenada do ponto A(Ya)"))
###
print("coordenadas do ponto B...")
Xb = int(input("abscissa do ponto B(Xb)"))
Yb = int(input("ordenada do ponto B(Yb)"))
###
Xm = ((Xb + Xa)/2)
round(Xm,1)
Ym = (Yb + Ya)/2
round(Ym,1)

print(Xm)
print(Ym)
-- OUTPUT:
coordenadas do ponto A...
coordenadas do ponto B...
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 01:56:23) 
-- CODE:
print("coordenadas do ponto A...")
Xa = float(input("abscissa do ponto A(Xa)"))
Ya = float(input("ordenada do ponto A(Ya)"))
###
print("coordenadas do ponto B...")
Xb = float(input("abscissa do ponto B(Xb)"))
Yb = float(input("ordenada do ponto B(Yb)"))
###
Xm = ((Xb + Xa)/2)
round(Xm,1)
Ym = (Yb + Ya)/2
round(Ym,1)

print(Xm)
print(Ym)
-- OUTPUT:
coordenadas do ponto A...
coordenadas do ponto B...
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 01:56:44) 
-- CODE:
print("coordenadas do ponto A...")
Xa = float(input("abscissa do ponto A(Xa)"))
Ya = float(input("ordenada do ponto A(Ya)"))
###
print("coordenadas do ponto B...")
Xb = float(input("abscissa do ponto B(Xb)"))
Yb = float(input("ordenada do ponto B(Yb)"))
###
Xm = ((Xb + Xa)/2)
round(Xm,1)
Ym = (Yb + Ya)/2
round(Ym,1)

print(Xm)
print(Ym)
-- EXECUTION TIME:
0.287219
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
coordenadas do ponto A...
coordenadas do ponto B...
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
coordenadas do ponto A...
coordenadas do ponto B...
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
coordenadas do ponto A...
coordenadas do ponto B...
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 01:57:03) 
-- CODE:
print("coordenadas do ponto A...")
Xa = float(input("abscissa do ponto A(Xa)"))
Ya = float(input("ordenada do ponto A(Ya)"))

print("coordenadas do ponto B...")
Xb = float(input("abscissa do ponto B(Xb)"))
Yb = float(input("ordenada do ponto B(Yb)"))

Xm = ((Xb + Xa)/2)
round(Xm,1)
Ym = (Yb + Ya)/2
round(Ym,1)

print(Xm)
print(Ym)
-- OUTPUT:
coordenadas do ponto A...
coordenadas do ponto B...
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 01:57:34) 
-- CODE:
print("coordenadas do ponto A...")
Xa = float(input("abscissa do ponto A(Xa)"))
Ya = float(input("ordenada do ponto A(Ya)"))

print("coordenadas do ponto B...")
Xb = float(input("abscissa do ponto B(Xb)"))
Yb = float(input("ordenada do ponto B(Yb)"))

Xm = (Xb + Xa)/2
round(Xm,1)
Ym = (Yb + Ya)/2
round(Ym,1)

print(Xm)
print(Ym)
-- EXECUTION TIME:
0.180539
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
coordenadas do ponto A...
coordenadas do ponto B...
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
coordenadas do ponto A...
coordenadas do ponto B...
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
coordenadas do ponto A...
coordenadas do ponto B...
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 01:58:33) 
-- CODE:
print("coordenadas do ponto A...")
Xa = float(input("abscissa do ponto A(Xa)"))
Ya = float(input("ordenada do ponto A(Ya)"))

print("coordenadas do ponto B...")
Xb = float(input("abscissa do ponto B(Xb)"))
Yb = float(input("ordenada do ponto B(Yb)"))

Xm = (Xb + Xa)/2
Ym = (Yb + Ya)/2

print(round(Xm,1))
print(round(Ym,1))
-- EXECUTION TIME:
0.177332
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
coordenadas do ponto A...
coordenadas do ponto B...
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
coordenadas do ponto A...
coordenadas do ponto B...
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
coordenadas do ponto A...
coordenadas do ponto B...
2.3
3.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 01:59:53) 
-- CODE:
Xa = float(input("abscissa do ponto A(Xa)"))
Ya = float(input("ordenada do ponto A(Ya)"))
Xb = float(input("abscissa do ponto B(Xb)"))
Yb = float(input("ordenada do ponto B(Yb)"))

Xm = (Xb + Xa)/2
Ym = (Yb + Ya)/2

print(round(Xm,1))
print(round(Ym,1))
-- EXECUTION TIME:
0.208144
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
